Mon Mar 14 13:48:36 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: avoid infinite loop on cancel

Sun Mar 13 09:16:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* src/odbc/error.c: rank did not clear trans status

Sun Mar 13 11:21:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- make rank_errors static
	- change style
	* src/tds/net.c: int FAR have no sense in no pointer context

Sat Mar 12 01:23:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* include/tdsodbc.h src/odbc/error.c:
	- order messages by severity and type
	* include/tds_sysdep_private.h src/tds/util.c src/tds/login.c
	* src/tds/config.c:
	- fixed incorrect client process id on the windows platform
	* src/tds/query.c: include numeric characters in quote exception
	* src/tds/mem.c: native error to sqlstate mappings
	* src/tds/net.c: prevent infinite wait if socket connect fails

Sun Feb 27 09:47:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- make sure we don't core if server charset is not supported

Sat Feb 26 14:08:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h src/tds/encodings.h:
	* src/tds/iconv.c src/tds/sybase_character_sets.h:
	- support for CP437 charset

Tue Feb 22 17:03:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/ctlib/ct.c src/odbc/unittests/compute.c:
	* src/replacements/readpassphrase.c src/tds/net.c:
	- remove some warning

Mon Feb 21 15:43:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: do not do pre-login if SSL not enabled

Sun Feb 20 10:18:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* misc/test-other.sh: improved
	* src/odbc/unittests/print.c: some fixes
	* src/tds/query.c: fix core in emulated prepared, handle NULLs
	* src/tds/token.c: fix buffer overflow using text
	* src/tds/unittests/dataread.c: