@@ -1,3 +1,10 @@
+Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h src/tds/Makefile.am src/tds/numeric.c:
+	* src/tds/unittests/Makefile.am:
+	* src/tds/unittests/numeric.c(added):
+	- scale numeric in a faster way
+	* misc/test-auto.sh: updated, better output
+
 Mon Mar 14 13:48:36 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/token.c: avoid infinite loop on cancel
 
